--- a/utils/blockbuilder/templates/blockname.grc.j2
+++ b/utils/blockbuilder/templates/blockname.grc.j2
@@ -1,26 +1,4 @@
 {% import 'macros.j2' as macros -%}
-{%- macro type_lookup(type, default) -%}
-{%- if type | is_list() -%}{% set type = type[0] -%}{%- endif -%}{%- if default | is_list() -%}{% set default = default[0] -%}{%- endif -%}
-{%- if type in ['ri32','ru32', 'uint32_t', 'int32_t', 'size_t',  'unsigned', 'unsigned int', 'long', 'unsigned long', 'long long', 'unsigned long long']  -%}int
-{%- elif type in ['ri16','ru16','short', 'unsigned short', 'uint16_t', 'int16_t'] -%}short
-{%- elif type in ['ri8','ru8','uint8_t', 'int8_t', 'byte', 'char', 'unsigned char'] -%}byte
-{%- elif type in ['cf64','cf32','std::complex<float>', 'gr_complex'] -%}complex
-{%- elif type in ['rf64','rf32','float'] -%}float
-{%- elif type in ['const char *', 'const std::string&'] -%}string
-{%- elif type in ['bool'] -%}bool
-{%- elif type in ['gui_hint'] -%}gui_hint
-{%- elif type.startswith('enums/') %}enum
-{%- else -%}{{default}}{%-endif-%}
-{%- endmacro -%}
-{%- macro vec_type_lookup(type, default) -%}
-{%- if type | is_list() -%}{% set type = type[0] -%}{%- endif -%}{%- if default | is_list() -%}{% set default = default[0] -%}{%- endif -%}
-{%- if type in ['ri32','ru32','int', 'uint32_t', 'int32_t', 'size_t',  'unsigned', 'unsigned int', 'long', 'unsigned long', 'long long', 'unsigned long long']  -%}int_vector
-{%- elif type in ['ri16','ru16','short', 'unsigned short', 'uint16_t', 'int16_t'] -%}int_vector
-{%- elif type in ['ri8','ru8','uint8_t', 'int8_t', 'byte', 'char', 'unsigned char'] -%}int_vector
-{%- elif type in ['cf64','cf32','std::complex<float>', 'gr_complex'] -%}complex_vector
-{%- elif type in ['rf64','rf32','float'] -%}float_vector
-{%- else -%}{{default}}{%-endif-%}
-{%- endmacro -%}
 {% macro get_linked_value(value, ports, parameters, typekeys) -%}
     {% set newvalue = value -%}
     {% if '/' in value | string() -%}
@@ -54,14 +32,14 @@ parameters:
     option_labels: [{% for opt in type_inst %}{{opt['label']}}{{"," if not loop.last}} {% endfor %}]
     option_attributes:
     {%-for key in typekeys%} {% set outer_loop = loop %}
-        {{key['id']}}: [{% for typev in type_inst %}{{type_lookup(typev['value'][outer_loop.index0])}},{%endfor%}]
+        {{key['id']}}: [{% for typev in type_inst %}{{typev['value'][outer_loop.index0]|grc_type}},{%endfor%}]
     {%-endfor-%}
 {% else %}
 {% for key in typekeys -%}
 -   id: {{key['id']}}
     label: {% if 'label' in key %}{{key['label']}}{% else %}IO Type{% endif %}
     dtype: enum
-    options: [{% for opt in key['options'] %}{{type_lookup(opt,opt)}}{{"," if not loop.last}} {% endfor %}]
+    options: [{% for opt in key['options'] %}{{opt|grc_type}}{{"," if not loop.last}} {% endfor %}]
     option_attributes:
         fcn: [{% for opt in key['options'] %}{{macros.typekey_suffix(opt,key['id'],ports)}}{{"," if not loop.last}} {% endfor %}]
     hide: part
@@ -72,7 +50,7 @@ parameters:
 {% if 'grc' not in param or 'hide' not in param['grc'] or ('hide' in param['grc'] and param['grc']['hide'] != 'all') -%}
 -   id: {{param['id']}}
     label: {{param['label']}}
-    dtype: {{type_lookup(param['dtype'],'raw') if 'container' not in param or param['container'] == 'scalar' else vec_type_lookup(param['dtype'],'raw')}}
+    dtype: {{param['dtype']|grc_type(ref=True,vec=param['container']=='vector')}}
     {%if 'is_enum' in param and param['is_enum'] %}
     options: [{%for k1,enum_type in module_enums.items() %}{% if param['dtype'].endswith(k1) %}{% for val in enum_type['enumerators']%} {{module}}.{{k1}}.{{val['id']}}{{',' if not loop.last}}{%endfor%}{%endif%}{%endfor%}]
     option_labels: [{%for k1,enum_type in module_enums.items() %}{% if param['dtype'].endswith(k1) %}{% for val in enum_type['enumerators']%}{{val['label'] if 'label' in val else val['id'] | upper}}{{',' if not loop.last}}{%endfor%}{%endif%}{%endfor%}]
@@ -84,7 +62,7 @@ parameters:
 {% for param in grc['parameters'] -%}
 -   id: {{param['id']}}
     label: {{param['label']}}
-    dtype: {{param['dtype']}}
+    dtype: {{param['dtype']|grc_type}}
     {% if 'default' in param %}default: {{param['default']}}{%endif%}
     {% if 'hide' in param %}hide: {{param['hide']}}{%endif%}
 {% endfor -%}
@@ -111,12 +89,12 @@ inputs:
 {% for port in ports -%}{%- if port['direction'] == 'input'%}
 -   domain: {{'${impl.domain}' if port['domain'] == 'stream' else port['domain']}}
 {% if type_inst %}
-    dtype: ${ type_inst.{{type_lookup(get_linked_value2(port['type']),get_linked_value2(port['type']))}} }
+    dtype: ${ type_inst.{{port['type']|grc_type}} }
 {% else %}
-    dtype: {{type_lookup(get_linked_value(port['type']),get_linked_value(port['type']))}}
+    dtype: {{port['type']|grc_type(ref=True)}}
 {% endif %}
-    {%if 'shape' in port %}vlen: {{get_linked_value(port['shape'])}}{% endif %}
-    {%if 'multiplicity' in port %}multiplicity: {{get_linked_value(port['multiplicity'])}}{% endif %}
+    {%if 'shape' in port %}vlen: {{port['shape']|get_linked_value}}{% endif %}
+    {%if 'multiplicity' in port %}multiplicity: {{port['multiplicity']|grc_type(ref=True)}}{% endif %}
     label: {{port['id']}}
     optional: {{ port['optional'] if 'optional' in port else 'false' }}
 {% endif %}{% endfor %}
@@ -131,12 +109,12 @@ outputs:
 {% if port['direction'] == 'output'-%}
 -   domain: {{'${impl.domain}' if port['domain'] == 'stream' else port['domain']}}
 {% if type_inst %}
-    dtype: ${ type_inst.{{type_lookup(get_linked_value2(port['type']),get_linked_value2(port['type']))}} }
+    dtype: ${ type_inst.{{port['type']|grc_type}} }
 {% else %}
-    dtype: {{type_lookup(get_linked_value(port['type']),get_linked_value(port['type']))}}
+    dtype: {{port['type']|grc_type(ref=True)}}
 {% endif %}
     {%if 'shape' in port %}vlen: {{get_linked_value(port['shape'])}}{% endif %}
-    {%if 'multiplicity' in port %}multiplicity: {{get_linked_value(port['multiplicity'])}}{% endif %}
+    {%if 'multiplicity' in port %}multiplicity: {{port['multiplicity']|grc_type(ref=True)}}{% endif %}
     label: {{port['id']}}
     optional: {{ port['optional'] if 'optional' in port else 'false' }}
 {% endif -%}
