utils/blockbuilder: add namespace for enums in pybind
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/utils/blockbuilder/templates/blockname_pybind.cc.j2
+++ b/utils/blockbuilder/templates/blockname_pybind.cc.j2
@@ -6,8 +6,8 @@
 namespace py = pybind11;
 
 #include <gnuradio/{{module}}/{{block}}.h>
-// pydoc.h is automatically generated in the build directory
-// #include <{{block}}_pydoc.h>
+using namespace gr::{{module}};
+
 
 void bind_{{block}}(py::module& m)
 {
