utils/blockbuilder: add inherits for addl block intf
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/utils/blockbuilder/templates/blockname.h.j2
+++ b/utils/blockbuilder/templates/blockname.h.j2
@@ -10,7 +10,7 @@
 namespace gr {
 namespace {{module}} {
 
-{{ macros.class_statement(block, blocktype) }}
+{{ macros.class_statement(block, blocktype, inherits) }}
 {
 public:
 {{ macros.block_args(parameters) }}
