--- a/utils/blockbuilder/templates/blockname_templated.cc.j2
+++ b/utils/blockbuilder/templates/blockname_templated.cc.j2
@@ -18,14 +18,14 @@ typename {{block}}<{% for key in typekeys -%}{{key['id']}}{{ ", " if not loop.la
         return make_{{ impl['id'] | lower }}(args);
         break;
     #endif
-    {% elif 'lang' in impl and impl['lang'] == 'python' and not vars.pyshell -%}
-    case available_impl::PYSHELL:
-        return make_pyshell(args);
+    {% elif 'lang' in impl and impl['lang'] == 'python' -%}
+    case available_impl::{{ impl['id'] | upper }}:
+        return make_pyshell("{{ impl['id'] | lower }}", args);
         break;
     {% if vars.update({'pyshell': True}) %} {% endif %}
     {% endif -%}
     {% endfor %}
-        
+
     default:
         throw std::invalid_argument(
             "invalid implementation specified");
