--- a/utils/blockbuilder/templates/blockname_pyshell_templated.h.j2
+++ b/utils/blockbuilder/templates/blockname_pyshell_templated.h.j2
@@ -3,6 +3,7 @@
 #include <pybind11/embed.h>
 #include <pybind11/pybind11.h> // must be first
 #include <pybind11/stl.h>
+#include <pybind11/complex.h>
 namespace py = pybind11;
 using namespace py::literals;
 
