utils/blockbuilder: correct vector type for typekeys and raw
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/utils/blockbuilder/templates/blockname.grc.j2
+++ b/utils/blockbuilder/templates/blockname.grc.j2
@@ -42,6 +42,7 @@ parameters:
     options: [{% for opt in key['options'] %}{{opt|grc_type}}{{"," if not loop.last}} {% endfor %}]
     option_attributes:
         fcn: [{% for opt in key['options'] %}{{macros.typekey_suffix(opt,key['id'],ports)}}{{"," if not loop.last}} {% endfor %}]
+        vec: [{% for opt in key['options'] %}{{opt|grc_type}}_vector{{"," if not loop.last}} {% endfor %}]
     hide: part
 {% endfor %}
 {% endif %}
